# cat-charity-2

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: README  env.py
alembic/versions/: e538a88061b7_initial_part_2.py
app/: __init__.py  main.py
app/api/: __init__.py  routers.py  validators.py
app/api/endpoints/: __init__.py  charity_project.py  donation.py  user.py
app/core/: base.py  config.py  db.py  init_db.py  user.py
app/crud/: __init__.py  base.py  charity_project.py  donation.py
app/models/: __init__.py  base.py  charity_project.py  donation.py  user.py
app/schemas/: charity_project.py  donation.py  user.py
app/services/: __init__.py  investment.py
