[project]
name = "cat-charity-2"
version = "0.1.0"
description = "QRKot Part II: аутентификация и авторизация"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "sqlalchemy==2.0.29",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "alembic==1.7.7",
    "aiosqlite==0.17.0",
    "uvicorn==0.17.6",
    "python-dotenv==1.0.1",
    "greenlet>=3.2.4",
    "fastapi-users[sqlalchemy]==13.0.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==7.1.3",
    "pytest-asyncio==0.23.4",
    "pytest-freezer==0.4.9",
    "pytest-lazy-fixture==0.6.3",
    "pytest-pythonpath==0.7.3",
    "flake8==7.1.1",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mixer==7.2.2",
    "faker==12.0.1",
    "freezegun==1.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 79
target-version = "py39"
exclude = ["tests", "alembic", "venv", ".venv"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "PIE"]
ignore = ["E265", "F811", "W292", "I001"]

[tool.ruff.lint.per-file-ignores]
"app/api/*" = ["ANN201"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["tests", "alembic"]

[[tool.mypy.overrides]]
module = "app.core.db"
disable_error_code = ["misc", "arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = "app.crud.base"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "app.api.*"
disallow_untyped_defs = false
